fix: Option description has sufficient color contrast in dark mode (#670)

--- a/src/internal/components/option/styles.scss
+++ b/src/internal/components/option/styles.scss
@@ -73,6 +73,14 @@
   @include styles.font-body-s;
   color: constants.$tags-description-color;
   flex-wrap: wrap;
+
+  &.highlighted {
+    color: constants.$tags-description-color-hover;
+  }
+
+  &.selected {
+    color: constants.$tags-description-color;
+  }
 }
 
 .tags {
